Fix z-index

--- a/client/stylus/app.activity.styl
+++ b/client/stylus/app.activity.styl
@@ -2750,6 +2750,7 @@ div.kdtooltip
   background                    #3BAF9A
   border-radius                 4px
   vendor                        transition, top 300ms ease
+  z-index                       10000
   abs()
 
   &.in
